--- a/portfolio.html
+++ b/portfolio.html
@@ -21,175 +21,194 @@
   <body>
     <!-- Шапка профиля -->
     <header>
-      <nav>
-        <a href="./index.html" class="header-logo-first"
-          >Web<span class="header-logo-second">Studio</span></a
-        >
-        <ul class="site-nav list">
-          <li><a href="./index.html" class="link">Студия</a></li>
-          <li><a href="./portfolio.html" class="link current">Портфолио</a></li>
-          <li><a href="" class="link">Контакты</a></li>
-        </ul>
-      </nav>
-      <ul class="auth-nav list">
-        <li>
-          <a href="mailto:info@devstudio.com" class="link"
-            >info@devstudio.com</a
+      <div class="container">
+        <nav>
+          <a href="./index.html" class="header-logo-first"
+            >Web<span class="header-logo-second">Studio</span></a
           >
-        </li>
-        <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
-      </ul>
+          <ul class="site-nav list">
+            <li><a href="./index.html" class="link">Студия</a></li>
+            <li>
+              <a href="./portfolio.html" class="link current">Портфолио</a>
+            </li>
+            <li><a href="" class="link">Контакты</a></li>
+          </ul>
+        </nav>
+        <ul class="auth-nav list">
+          <li>
+            <a href="mailto:info@devstudio.com" class="link"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+          </li>
+        </ul>
+      </div>
     </header>
 
     <main>
       <section class="filter">
-        <h1 hidden>Filter</h1>
-        <ul class="list">
-          <li><button type="button" class="button-primary">Все</button></li>
-          <li>
-            <button type="button" class="button-secondary">Веб-сайты</button>
-          </li>
-          <li>
-            <button type="button" class="button-secondary">Приложения</button>
-          </li>
-          <li>
-            <button type="button" class="button-secondary">Дизайн</button>
-          </li>
-          <li>
-            <button type="button" class="button-secondary">Маркетинг</button>
-          </li>
-        </ul>
+        <div class="container">
+          <h1 hidden>Filter</h1>
+          <ul class="list">
+            <li><button type="button" class="filter-button active">Все</button></li>
+            <li>
+              <button type="button" class="filter-button">Веб-сайты</button>
+            </li>
+            <li>
+              <button type="button" class="filter-button">Приложения</button>
+            </li>
+            <li>
+              <button type="button" class="filter-button">Дизайн</button>
+            </li>
+            <li>
+              <button type="button" class="filter-button">Маркетинг</button>
+            </li>
+          </ul>
 
-        <ul class="project-list list">
-          <li>
-            <a href="">
-              <img
-                src="./images/project1.jpg"
-                alt="Фoто команды"
-                width="370"
-                height="294"
-              />
-              <h2 class="name">Технокряк</h2>
-              <p class="description">Веб-сайт</p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./images/project2.jpg"
-                alt="Баскетболисты с мячом"
-                width="370"
-                height="294"
-              />
-              <h2 class="name">Постер New Orlean vs Golden Star</h2>
-              <p class="description">Дизайн</p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./images/project3.jpg"
-                alt="Эмблема ресторана"
-                width="370"
-                height="294"
-              />
-              <h2 class="name">Ресторан Seafood</h2>
-              <p class="description">Приложение</p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./images/project4.jpg"
-                alt="Наушники"
-                width="370"
-                height="294"
-              />
-              <h2 class="name">Проект Prime</h2>
-              <p class="description">Маркетинг</p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./images/project5.jpg"
-                alt="Две коробки"
-                width="370"
-                height="294"
-              />
-              <h2 class="name">Проект Boxes</h2>
-              <p class="description">Приложение</p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./images/project6.jpg"
-                alt="Монитор"
-                width="370"
-                height="294"
-              />
-              <h2 class="name" lang="en">Inspiration has no Borders</h2>
-              <p class="description">Веб-сайт</p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./images/project7.jpg"
-                alt="Журнал"
-                width="370"
-                height="294"
-              />
-              <h2 class="name">Издание Limited Edition</h2>
-              <p class="description">Дизайн</p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./images/project8.jpg"
-                alt="Лейба"
-                width="370"
-                height="294"
-              />
-              <h2 class="name">Проект LAB</h2>
-              <p class="description">Маркетинг</p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./images/project9.jpg"
-                alt="Ноутбук"
-                width="370"
-                height="294"
-              />
-              <h2 class="name" lang="en">Growing Business</h2>
-              <p class="description">Приложение</p>
-            </a>
-          </li>
-        </ul>
+          <ul class="project-list list">
+            <li>
+              <a href="">
+                <img
+                  src="./images/project1.jpg"
+                  alt="Фoто команды"
+                  width="370"
+                  height="294"
+                  class="project-picture"
+                />
+                <h2 class="name">Технокряк</h2>
+                <p class="description">Веб-сайт</p>
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <img
+                  src="./images/project2.jpg"
+                  alt="Баскетболисты с мячом"
+                  width="370"
+                  height="294"
+                  class="project-picture"
+                />
+                <h2 class="name">Постер New Orlean vs Golden Star</h2>
+                <p class="description">Дизайн</p>
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <img
+                  src="./images/project3.jpg"
+                  alt="Эмблема ресторана"
+                  width="370"
+                  height="294"
+                  class="project-picture"
+                />
+                <h2 class="name">Ресторан Seafood</h2>
+                <p class="description">Приложение</p>
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <img
+                  src="./images/project4.jpg"
+                  alt="Наушники"
+                  width="370"
+                  height="294"
+                  class="project-picture"
+                />
+                <h2 class="name">Проект Prime</h2>
+                <p class="description">Маркетинг</p>
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <img
+                  src="./images/project5.jpg"
+                  alt="Две коробки"
+                  width="370"
+                  height="294"
+                  class="project-picture"
+                />
+                <h2 class="name">Проект Boxes</h2>
+                <p class="description">Приложение</p>
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <img
+                  src="./images/project6.jpg"
+                  alt="Монитор"
+                  width="370"
+                  height="294"
+                  class="project-picture"
+                />
+                <h2 class="name" lang="en">Inspiration has no Borders</h2>
+                <p class="description">Веб-сайт</p>
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <img
+                  src="./images/project7.jpg"
+                  alt="Журнал"
+                  width="370"
+                  height="294"
+                  class="project-picture"
+                />
+                <h2 class="name">Издание Limited Edition</h2>
+                <p class="description">Дизайн</p>
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <img
+                  src="./images/project8.jpg"
+                  alt="Лейба"
+                  width="370"
+                  height="294"
+                  class="project-picture"
+                />
+                <h2 class="name">Проект LAB</h2>
+                <p class="description">Маркетинг</p>
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <img
+                  src="./images/project9.jpg"
+                  alt="Ноутбук"
+                  width="370"
+                  height="294"
+                  class="project-picture"
+                />
+                <h2 class="name" lang="en">Growing Business</h2>
+                <p class="description">Приложение</p>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <footer>
-      <a href="./index.html" class="footer-logo-first"
-        >Web<span class="footer-logo-second">Studio</span></a
-      >
-      <address>
-        <ul class="footer-address list">
-          <li class="address">г. Киев, пр-т Леси Украинки, 26</li>
-          <li>
-            <a class="link" href="mailto:info@devstudio.com"
-              >info@example.com</a
-            >
-          </li>
-          <li>
-            <a class="link" href="tel:+380961111111">+38 099 111 11 11</a>
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <a href="./index.html" class="footer-logo-first"
+          >Web<span class="footer-logo-second">Studio</span></a
+        >
+        <address>
+          <ul class="footer-address list">
+            <li class="address">г. Киев, пр-т Леси Украинки, 26</li>
+            <li>
+              <a class="link" href="mailto:info@devstudio.com"
+                >info@example.com</a
+              >
+            </li>
+            <li>
+              <a class="link" href="tel:+380961111111">+38 099 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
