Add section padding

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <main>
       <!-- Герой -->
-      <section class="hero">
+      <section class="section hero">
         <h2 class="hero-title">
           Эффективные решения <br />
           для вашего бизнеса
@@ -56,7 +56,7 @@
       </section>
 
       <!-- Feature -->
-      <section class="feature">
+      <section class="section">
         <div class="container">
           <h2 hidden>Особенности</h2>
           <ul class="feature-list list">
@@ -93,7 +93,7 @@
       </section>
 
       <!-- Work -->
-      <section class="work">
+      <section class="section">
         <div class="container">
           <h2 class="work-title">Чем мы занимаемся</h2>
           <ul class="list">
@@ -117,7 +117,7 @@
       </section>
 
       <!-- Team -->
-      <section class="team">
+      <section class="section team">
         <div class="container">
           <h2 class="team-title">Наша команда</h2>
           <ul class="team-list list">
