--- a/portfolio.html
+++ b/portfolio.html
@@ -52,7 +52,9 @@
         <div class="container">
           <h1 hidden>Filter</h1>
           <ul class="list">
-            <li><button type="button" class="filter-button active">Все</button></li>
+            <li>
+              <button type="button" class="filter-button active">Все</button>
+            </li>
             <li>
               <button type="button" class="filter-button">Веб-сайты</button>
             </li>
