Add flex for index page

--- a/index.html
+++ b/index.html
@@ -22,23 +22,25 @@
     <!-- Шапка профиля -->
     <header>
       <div class="container">
-        <nav>
+        <nav class="main-nav">
           <a href="./index.html" class="header-logo-first"
             >Web<span class="header-logo-second">Studio</span></a
           >
           <ul class="site-nav list">
-            <li><a href="" class="link current">Студия</a></li>
-            <li><a href="./portfolio.html" class="link">Портфолио</a></li>
-            <li><a href="" class="link">Контакты</a></li>
+            <li class="item"><a href="" class="link current">Студия</a></li>
+            <li class="item">
+              <a href="./portfolio.html" class="link">Портфолио</a>
+            </li>
+            <li class="item"><a href="" class="link">Контакты</a></li>
           </ul>
         </nav>
         <ul class="auth-nav list">
-          <li>
+          <li class="item">
             <a href="mailto:info@devstudio.com" class="link"
               >info@devstudio.com</a
             >
           </li>
-          <li>
+          <li class="item">
             <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
           </li>
         </ul>
@@ -60,28 +62,28 @@
         <div class="container">
           <h2 hidden>Особенности</h2>
           <ul class="feature-list list">
-            <li>
+            <li class="item">
               <h3 class="title">Внимание к деталям</h3>
               <p class="text">
                 Идейные соображения, а также начало повседневной работы по
                 формированию позиции.
               </p>
             </li>
-            <li>
+            <li class="item">
               <h3 class="title">Пунктуальность</h3>
               <p class="text">
                 Задача организации, в особенности же рамки и место обучения
                 кадров влечет за собой.
               </p>
             </li>
-            <li>
+            <li class="item">
               <h3 class="title">Планирование</h3>
               <p class="text">
                 Равным образом консультация с широким активом в значительной
                 степени обуславливает.
               </p>
             </li>
-            <li>
+            <li class="item">
               <h3 class="title">Современные технологии</h3>
               <p class="text">
                 Значимость этих проблем настолько очевидна, что реализация
@@ -93,21 +95,21 @@
       </section>
 
       <!-- Work -->
-      <section class="section">
+      <section class="section work-section">
         <div class="container">
           <h2 class="work-title">Чем мы занимаемся</h2>
-          <ul class="list">
-            <li>
+          <ul class="work-list list">
+            <li class="item">
               <a href=""
                 ><img src="./images/box1.jpg" alt="Ноутбук" width="370"
               /></a>
             </li>
-            <li>
+            <li class="item">
               <a href=""
                 ><img src="./images/box2.jpg" alt="Смартфон" width="370"
               /></a>
             </li>
-            <li>
+            <li class="item">
               <a href=""
                 ><img src="./images/box3.jpg" alt="Планшет" width="370"
               /></a>
@@ -121,7 +123,7 @@
         <div class="container">
           <h2 class="team-title">Наша команда</h2>
           <ul class="team-list list">
-            <li>
+            <li class="item">
               <a href=""
                 ><img
                   src="./images/team-card-1.jpg"
@@ -129,10 +131,12 @@
                   width="270"
                   class="team-picture"
               /></a>
-              <h3 class="title">Игорь Демьяненко</h3>
-              <p class="position" lang="en">Product Designer</p>
+              <div class="info-block">
+                <h3 class="title">Игорь Демьяненко</h3>
+                <p class="position" lang="en">Product Designer</p>
+              </div>
             </li>
-            <li>
+            <li class="item">
               <a href=""
                 ><img
                   src="./images/team-card-2.jpg"
@@ -141,10 +145,12 @@
                   class="team-picture"
                 />
               </a>
-              <h3 class="title">Ольга Репина</h3>
-              <p class="position" lang="en">Frontend Developer</p>
+              <div class="info-block">
+                <h3 class="title">Ольга Репина</h3>
+                <p class="position" lang="en">Frontend Developer</p>
+              </div>
             </li>
-            <li>
+            <li class="item">
               <a href=""
                 ><img
                   src="./images/team-card-3.jpg"
@@ -152,10 +158,12 @@
                   width="270"
                   class="team-picture"
               /></a>
-              <h3 class="title">Николай Тарасов</h3>
-              <p class="position" lang="en">Marketing</p>
+              <div class="info-block">
+                <h3 class="title">Николай Тарасов</h3>
+                <p class="position" lang="en">Marketing</p>
+              </div>
             </li>
-            <li>
+            <li class="item">
               <a href=""
                 ><img
                   src="./images/team-card-4.jpg"
@@ -163,8 +171,10 @@
                   width="270"
                   class="team-picture"
               /></a>
-              <h3 class="title">Михаил Ермаков</h3>
-              <p class="position" lang="en">UI Designer</p>
+              <div class="info-block">
+                <h3 class="title">Михаил Ермаков</h3>
+                <p class="position" lang="en">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
