--- a/portfolio.html
+++ b/portfolio.html
@@ -22,25 +22,25 @@
     <!-- Шапка профиля -->
     <header>
       <div class="container">
-        <nav>
+        <nav class="main-nav">
           <a href="./index.html" class="header-logo-first"
             >Web<span class="header-logo-second">Studio</span></a
           >
           <ul class="site-nav list">
-            <li><a href="./index.html" class="link">Студия</a></li>
-            <li>
+            <li class="item"><a href="./index.html" class="link">Студия</a></li>
+            <li class="item">
               <a href="./portfolio.html" class="link current">Портфолио</a>
             </li>
-            <li><a href="" class="link">Контакты</a></li>
+            <li class="item"><a href="" class="link">Контакты</a></li>
           </ul>
         </nav>
         <ul class="auth-nav list">
-          <li>
+          <li class="item">
             <a href="mailto:info@devstudio.com" class="link"
               >info@devstudio.com</a
             >
           </li>
-          <li>
+          <li class="item">
             <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
           </li>
         </ul>
@@ -51,26 +51,26 @@
       <section class="filter">
         <div class="container">
           <h1 hidden>Filter</h1>
-          <ul class="list">
-            <li>
+          <ul class="filter-list list">
+            <li class="item">
               <button type="button" class="filter-button active">Все</button>
             </li>
-            <li>
+            <li class="item">
               <button type="button" class="filter-button">Веб-сайты</button>
             </li>
-            <li>
+            <li class="item">
               <button type="button" class="filter-button">Приложения</button>
             </li>
-            <li>
+            <li class="item">
               <button type="button" class="filter-button">Дизайн</button>
             </li>
-            <li>
+            <li class="item">
               <button type="button" class="filter-button">Маркетинг</button>
             </li>
           </ul>
 
           <ul class="project-list list">
-            <li>
+            <li class="item">
               <a href="">
                 <img
                   src="./images/project1.jpg"
@@ -79,11 +79,13 @@
                   height="294"
                   class="project-picture"
                 />
-                <h2 class="name">Технокряк</h2>
-                <p class="description">Веб-сайт</p>
+                <div class="project-info-block">
+                  <h2 class="name">Технокряк</h2>
+                  <p class="description">Веб-сайт</p>
+                </div>
               </a>
             </li>
-            <li>
+            <li class="item">
               <a href="">
                 <img
                   src="./images/project2.jpg"
@@ -92,11 +94,13 @@
                   height="294"
                   class="project-picture"
                 />
-                <h2 class="name">Постер New Orlean vs Golden Star</h2>
-                <p class="description">Дизайн</p>
+                <div class="project-info-block">
+                  <h2 class="name">Постер New Orlean vs Golden Star</h2>
+                  <p class="description">Дизайн</p>
+                </div>
               </a>
             </li>
-            <li>
+            <li class="item">
               <a href="">
                 <img
                   src="./images/project3.jpg"
@@ -105,11 +109,13 @@
                   height="294"
                   class="project-picture"
                 />
-                <h2 class="name">Ресторан Seafood</h2>
-                <p class="description">Приложение</p>
+                <div class="project-info-block">
+                  <h2 class="name">Ресторан Seafood</h2>
+                  <p class="description">Приложение</p>
+                </div>
               </a>
             </li>
-            <li>
+            <li class="item">
               <a href="">
                 <img
                   src="./images/project4.jpg"
@@ -118,11 +124,13 @@
                   height="294"
                   class="project-picture"
                 />
-                <h2 class="name">Проект Prime</h2>
-                <p class="description">Маркетинг</p>
+                <div class="project-info-block">
+                  <h2 class="name">Проект Prime</h2>
+                  <p class="description">Маркетинг</p>
+                </div>
               </a>
             </li>
-            <li>
+            <li class="item">
               <a href="">
                 <img
                   src="./images/project5.jpg"
@@ -131,11 +139,13 @@
                   height="294"
                   class="project-picture"
                 />
-                <h2 class="name">Проект Boxes</h2>
-                <p class="description">Приложение</p>
+                <div class="project-info-block">
+                  <h2 class="name">Проект Boxes</h2>
+                  <p class="description">Приложение</p>
+                </div>
               </a>
             </li>
-            <li>
+            <li class="item">
               <a href="">
                 <img
                   src="./images/project6.jpg"
@@ -144,11 +154,13 @@
                   height="294"
                   class="project-picture"
                 />
-                <h2 class="name" lang="en">Inspiration has no Borders</h2>
-                <p class="description">Веб-сайт</p>
+                <div class="project-info-block">
+                  <h2 class="name" lang="en">Inspiration has no Borders</h2>
+                  <p class="description">Веб-сайт</p>
+                </div>
               </a>
             </li>
-            <li>
+            <li class="item">
               <a href="">
                 <img
                   src="./images/project7.jpg"
@@ -157,11 +169,13 @@
                   height="294"
                   class="project-picture"
                 />
-                <h2 class="name">Издание Limited Edition</h2>
-                <p class="description">Дизайн</p>
+                <div class="project-info-block">
+                  <h2 class="name">Издание Limited Edition</h2>
+                  <p class="description">Дизайн</p>
+                </div>
               </a>
             </li>
-            <li>
+            <li class="item">
               <a href="">
                 <img
                   src="./images/project8.jpg"
@@ -170,11 +184,13 @@
                   height="294"
                   class="project-picture"
                 />
-                <h2 class="name">Проект LAB</h2>
-                <p class="description">Маркетинг</p>
+                <div class="project-info-block">
+                  <h2 class="name">Проект LAB</h2>
+                  <p class="description">Маркетинг</p>
+                </div>
               </a>
             </li>
-            <li>
+            <li class="item">
               <a href="">
                 <img
                   src="./images/project9.jpg"
