Make changes after check

--- a/portfolio.html
+++ b/portfolio.html
@@ -48,7 +48,7 @@
     </header>
 
     <main>
-      <section class="filter">
+      <section class="section">
         <div class="container">
           <h1 hidden>Filter</h1>
           <ul class="filter-list list">
@@ -199,8 +199,10 @@
                   height="294"
                   class="project-picture"
                 />
-                <h2 class="name" lang="en">Growing Business</h2>
-                <p class="description">Приложение</p>
+                <div class="project-info-block">
+                  <h2 class="name" lang="en">Growing Business</h2>
+                  <p class="description">Приложение</p>
+                </div>
               </a>
             </li>
           </ul>
